--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "underscore": "~1.8.3",
     "bootstrap": "~3.3.4",
-    "jasny-bootstrap": "~3.1.3"
+    "jasny-bootstrap": "~3.1.3",
+    "bootstrap-tagsinput": "~0.4.2"
   }
 }
