--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-model_mommy
 Django==1.7
 django-bootstrap3==5.2.0
 django-crispy-forms==1.4.0
 django-extensions==1.5.2
+django-grappelli==2.6.4
 django-model-utils==2.2
 django-parsley==0.5
+django-taggit==0.13.0
+django-timezone-field==1.2
+django-wkhtmltopdf==2.0.2
+model-mommy==1.2.4
 MySQL-python==1.2.5
+pytz==2015.2
 six==1.9.0
